@@ -5,11 +5,15 @@ import net.momirealms.craftengine.core.entity.player.Player;
 import net.momirealms.craftengine.core.pack.LoadingSequence;
 import net.momirealms.craftengine.core.pack.Pack;
 import net.momirealms.craftengine.core.pack.ResourceLocation;
+import net.momirealms.craftengine.core.pack.allocator.IdAllocator;
 import net.momirealms.craftengine.core.plugin.CraftEngine;
+import net.momirealms.craftengine.core.plugin.config.Config;
 import net.momirealms.craftengine.core.plugin.config.ConfigParser;
+import net.momirealms.craftengine.core.plugin.config.IdSectionConfigParser;
 import net.momirealms.craftengine.core.plugin.context.ContextHolder;
 import net.momirealms.craftengine.core.plugin.context.PlayerOptionalContext;
 import net.momirealms.craftengine.core.plugin.locale.LocalizedResourceConfigException;
+import net.momirealms.craftengine.core.plugin.text.component.ComponentProvider;
 import net.momirealms.craftengine.core.util.*;
 import org.ahocorasick.trie.Token;
 import org.ahocorasick.trie.Trie;
@@ -22,6 +26,9 @@ import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.CompletionException;
+import java.util.concurrent.ExecutionException;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
@@ -39,9 +46,9 @@ public abstract class AbstractFontManager implements FontManager {
     private final EmojiParser emojiParser;
     private OffsetFont offsetFont;
 
-    protected Trie imageTagTrie;
+    protected Trie networkTagTrie;
     protected Trie emojiKeywordTrie;
-    protected Map<String, Component> tagMapper;
+    protected Map<String, ComponentProvider> networkTagMapper;
     protected Map<String, Emoji> emojiMapper;
     protected List<Emoji> emojiList;
     protected List<String> allEmojiSuggestions;
@@ -52,11 +59,36 @@ public abstract class AbstractFontManager implements FontManager {
         this.emojiParser = new EmojiParser();
     }
 
+    public ImageParser imageParser() {
+        return imageParser;
+    }
+
+    public EmojiParser emojiParser() {
+        return emojiParser;
+    }
+
     @Override
     public void load() {
         this.offsetFont = Optional.ofNullable(plugin.config().settings().getSection("image.offset-characters"))
+                .filter(section -> section.getBoolean("enable", true))
                 .map(OffsetFont::new)
                 .orElse(null);
+        this.networkTagMapper = new HashMap<>(1024);
+    }
+
+    @Override
+    public OffsetFont offsetFont() {
+        return offsetFont;
+    }
+
+    @Override
+    public Map<Key, BitmapImage> loadedImages() {
+        return Collections.unmodifiableMap(this.images);
+    }
+
+    @Override
+    public Map<Key, Emoji> emojis() {
+        return Collections.unmodifiableMap(this.emojis);
     }
 
     @Override
@@ -65,6 +97,14 @@ public abstract class AbstractFontManager implements FontManager {
         this.images.clear();
         this.illegalChars.clear();
         this.emojis.clear();
+        this.networkTagTrie = null;
+        this.emojiKeywordTrie = null;
+        if (this.networkTagMapper != null) {
+            this.networkTagMapper.clear();
+        }
+        if (this.emojiMapper != null) {
+            this.emojiMapper.clear();
+        }
     }
 
     @Override
@@ -80,7 +120,11 @@ public abstract class AbstractFontManager implements FontManager {
     @Override
     public void delayedLoad() {
         Optional.ofNullable(this.fonts.get(DEFAULT_FONT)).ifPresent(font -> this.illegalChars.addAll(font.codepointsInUse()));
-        this.buildImageTagTrie();
+        this.registerImageTags();
+        this.registerShiftTags();
+        this.registerGlobalTags();
+        this.registerL10nTags();
+        this.buildNetworkTagTrie();
         this.buildEmojiKeywordsTrie();
         this.emojiList = new ArrayList<>(this.emojis.values());
         this.allEmojiSuggestions = this.emojis.values().stream()
@@ -88,15 +132,61 @@ public abstract class AbstractFontManager implements FontManager {
                 .collect(Collectors.toList());
     }
 
+    private void registerL10nTags() {
+        for (String key : this.plugin.translationManager().translationKeys()) {
+            String l10nTag = l10nTag(key);
+            this.networkTagMapper.put(l10nTag, ComponentProvider.l10n(key));
+            this.networkTagMapper.put("\\" + l10nTag, ComponentProvider.constant(Component.text(l10nTag)));
+        }
+    }
+
+    private void registerGlobalTags() {
+        for (Map.Entry<String, String> entry : this.plugin.globalVariableManager().globalVariables().entrySet()) {
+            String globalTag = globalTag(entry.getKey());
+            this.networkTagMapper.put(globalTag, ComponentProvider.miniMessageOrConstant(entry.getValue()));
+            this.networkTagMapper.put("\\" + globalTag, ComponentProvider.constant(Component.text(entry.getValue())));
+        }
+    }
+
+    private void registerShiftTags() {
+        if (this.offsetFont == null) return;
+        for (int i = -256; i <= 256; i++) {
+            String shiftTag = "<shift:" + i + ">";
+            this.networkTagMapper.put(shiftTag, ComponentProvider.constant(this.offsetFont.createOffset(i)));
+            this.networkTagMapper.put("\\" + shiftTag, ComponentProvider.constant(Component.text(shiftTag)));
+        }
+    }
+
+    private void registerImageTags() {
+        for (BitmapImage image : this.images.values()) {
+            Key key = image.id();
+            String id = key.toString();
+            String simpleImageTag = imageTag(id);
+            this.networkTagMapper.put(simpleImageTag, ComponentProvider.constant(image.componentAt(0, 0)));
+            this.networkTagMapper.put("\\" + simpleImageTag, ComponentProvider.constant(Component.text(simpleImageTag)));
+            String simplerImageTag = imageTag(key.value());
+            this.networkTagMapper.put(simplerImageTag, ComponentProvider.constant(image.componentAt(0, 0)));
+            this.networkTagMapper.put("\\" + simplerImageTag, ComponentProvider.constant(Component.text(simplerImageTag)));
+            for (int i = 0; i < image.rows(); i++) {
+                for (int j = 0; j < image.columns(); j++) {
+                    String imageArgs = id + ":" + i + ":" + j;
+                    String imageTag = imageTag(imageArgs);
+                    this.networkTagMapper.put(imageTag, ComponentProvider.constant(image.componentAt(i, j)));
+                    this.networkTagMapper.put("\\" + imageTag, ComponentProvider.constant(Component.text(imageTag)));
+                }
+            }
+        }
+    }
+
     @Override
-    public Map<String, Component> matchTags(String json) {
-        if (this.imageTagTrie == null) {
+    public Map<String, ComponentProvider> matchTags(String text) {
+        if (this.networkTagTrie == null) {
             return Collections.emptyMap();
         }
-        Map<String, Component> tags = new HashMap<>();
-        for (Token token : this.imageTagTrie.tokenize(json)) {
+        Map<String, ComponentProvider> tags = new HashMap<>();
+        for (Token token : this.networkTagTrie.tokenize(text)) {
             if (token.isMatch()) {
-                tags.put(token.getFragment(), this.tagMapper.get(token.getFragment()));
+                tags.put(token.getFragment(), this.networkTagMapper.get(token.getFragment()));
             }
         }
         return tags;
@@ -167,7 +257,7 @@ public abstract class AbstractFontManager implements FontManager {
                     emoji.content(),
                     PlayerOptionalContext.of(player, ContextHolder.builder()
                             .withOptionalParameter(EmojiParameters.EMOJI, emoji.emojiImage())
-                            .withParameter(EmojiParameters.KEYWORD, emoji.keywords().get(0))
+                            .withParameter(EmojiParameters.KEYWORD, emoji.keywords().getFirst())
                     ).tagResolvers())
             );
             if (emojis.size() >= maxTimes) break;
@@ -218,9 +308,9 @@ public abstract class AbstractFontManager implements FontManager {
     public IllegalCharacterProcessResult processIllegalCharacters(String raw, char replacement) {
         boolean hasIllegal = false;
         // replace illegal image usage
-        Map<String, Component> tokens = matchTags(raw);
+        Map<String, ComponentProvider> tokens = matchTags(raw);
         if (!tokens.isEmpty()) {
-            for (Map.Entry<String, Component> entry : tokens.entrySet()) {
+            for (Map.Entry<String, ComponentProvider> entry : tokens.entrySet()) {
                 raw = raw.replace(entry.getKey(), String.valueOf(replacement));
                 hasIllegal = true;
             }
@@ -264,35 +354,23 @@ public abstract class AbstractFontManager implements FontManager {
                 .build();
     }
 
-    private void buildImageTagTrie() {
-        this.tagMapper = new HashMap<>(1024);
-        for (BitmapImage image : this.images.values()) {
-            String id = image.id().toString();
-            String simpleImageTag = imageTag(id);
-            this.tagMapper.put(simpleImageTag, image.componentAt(0, 0));
-            this.tagMapper.put("\\" + simpleImageTag, Component.text(simpleImageTag));
-            for (int i = 0; i < image.rows(); i++) {
-                for (int j = 0; j < image.columns(); j++) {
-                    String imageArgs = id + ":" + i + ":" + j;
-                    String imageTag = imageTag(imageArgs);
-                    this.tagMapper.put(imageTag, image.componentAt(i, j));
-                    this.tagMapper.put("\\" + imageTag, Component.text(imageTag));
-                }
-            }
-        }
-        for (int i = -256; i <= 256; i++) {
-            String shiftTag = "<shift:" + i + ">";
-            this.tagMapper.put(shiftTag, this.offsetFont.createOffset(i));
-            this.tagMapper.put("\\" + shiftTag, Component.text(shiftTag));
-        }
-        this.imageTagTrie = Trie.builder()
+    private void buildNetworkTagTrie() {
+        this.networkTagTrie = Trie.builder()
                 .ignoreOverlaps()
-                .addKeywords(this.tagMapper.keySet())
+                .addKeywords(this.networkTagMapper.keySet())
                 .build();
     }
 
     private static String imageTag(String text) {
         return "<image:" + text + ">";
+    }
+
+    private static String globalTag(String text) {
+        return "<global:" + text + ">";
+    }
+
+    private static String l10nTag(String text) {
+        return "<l10n:" + text + ">";
     }
 
     @Override
@@ -341,8 +419,8 @@ public abstract class AbstractFontManager implements FontManager {
         return this.fonts.computeIfAbsent(key, Font::new);
     }
 
-    public class EmojiParser implements ConfigParser {
-        public static final String[] CONFIG_SECTION_NAME = new String[] {"emoji", "emojis"};
+    public class EmojiParser extends IdSectionConfigParser {
+        public static final String[] CONFIG_SECTION_NAME = new String[] {"emojis", "emoji"};
 
         @Override
         public String[] sectionId() {
@@ -355,18 +433,18 @@ public abstract class AbstractFontManager implements FontManager {
         }
 
         @Override
-        public void parseSection(Pack pack, Path path, Key id, Map<String, Object> section) {
+        public void parseSection(Pack pack, Path path, String node, Key id, Map<String, Object> section) {
             if (emojis.containsKey(id)) {
-                throw new LocalizedResourceConfigException("warning.config.emoji.duplicate", path, id);
+                throw new LocalizedResourceConfigException("warning.config.emoji.duplicate");
             }
             String permission = (String) section.get("permission");
             Object keywordsRaw = section.get("keywords");
             if (keywordsRaw == null) {
-                throw new LocalizedResourceConfigException("warning.config.emoji.missing_keywords", path, id);
+                throw new LocalizedResourceConfigException("warning.config.emoji.missing_keywords");
             }
             List<String> keywords = MiscUtils.getAsStringList(keywordsRaw);
             if (keywords.isEmpty()) {
-                throw new LocalizedResourceConfigException("warning.config.emoji.missing_keywords", path, id);
+                throw new LocalizedResourceConfigException("warning.config.emoji.missing_keywords");
             }
             Object rawContent = section.getOrDefault("content", "<white><arg:emoji></white>");
             String content;
@@ -385,7 +463,7 @@ public abstract class AbstractFontManager implements FontManager {
                     if (bitmapImage.isPresent()) {
                         image = bitmapImage.get().miniMessageAt(0, 0);
                     } else {
-                        throw new LocalizedResourceConfigException("warning.config.emoji.invalid_image", path, id, rawImage);
+                        throw new LocalizedResourceConfigException("warning.config.emoji.invalid_image", rawImage);
                     }
                 } else if (split.length == 4) {
                     Key imageId = new Key(split[0], split[1]);
@@ -394,13 +472,13 @@ public abstract class AbstractFontManager implements FontManager {
                         try {
                             image = bitmapImage.get().miniMessageAt(Integer.parseInt(split[2]), Integer.parseInt(split[3]));
                         } catch (ArrayIndexOutOfBoundsException e) {
-                            throw new LocalizedResourceConfigException("warning.config.emoji.invalid_image", path, id, rawImage);
+                            throw new LocalizedResourceConfigException("warning.config.emoji.invalid_image", rawImage);
                         }
                     } else {
-                        throw new LocalizedResourceConfigException("warning.config.emoji.invalid_image", path, id, rawImage);
+                        throw new LocalizedResourceConfigException("warning.config.emoji.invalid_image", rawImage);
                     }
                 } else {
-                    throw new LocalizedResourceConfigException("warning.config.emoji.invalid_image", path, id, rawImage);
+                    throw new LocalizedResourceConfigException("warning.config.emoji.invalid_image", rawImage);
                 }
             }
             Emoji emoji = new Emoji(content, permission, image, keywords);
@@ -408,8 +486,9 @@ public abstract class AbstractFontManager implements FontManager {
         }
     }
 
-    public class ImageParser implements ConfigParser {
+    public class ImageParser extends IdSectionConfigParser {
         public static final String[] CONFIG_SECTION_NAME = new String[] {"images", "image"};
+        private final Map<Key, IdAllocator> idAllocators = new HashMap<>();
 
         @Override
         public String[] sectionId() {
@@ -422,129 +501,219 @@ public abstract class AbstractFontManager implements FontManager {
         }
 
         @Override
-        public void parseSection(Pack pack, Path path, Key id, Map<String, Object> section) {
-            if (images.containsKey(id)) {
-                throw new LocalizedResourceConfigException("warning.config.image.duplicate", path, id);
+        public void postProcess() {
+            for (Map.Entry<Key, IdAllocator> entry : this.idAllocators.entrySet()) {
+                entry.getValue().processPendingAllocations();
+                try {
+                    entry.getValue().saveToCache();
+                } catch (IOException e) {
+                    AbstractFontManager.this.plugin.logger().warn("Error while saving codepoint allocation for font " + entry.getKey().asString(), e);
+                }
+            }
+        }
+
+        @Override
+        public void preProcess() {
+            this.idAllocators.clear();
+        }
+
+        public IdAllocator getOrCreateIdAllocator(Key key) {
+            return this.idAllocators.computeIfAbsent(key, k -> {
+                IdAllocator newAllocator = new IdAllocator(plugin.dataFolderPath().resolve("cache").resolve("font").resolve(k.namespace()).resolve(k.value() + ".json"));
+                newAllocator.reset(Config.codepointStartingValue(k), 1114111); // utf16
+                try {
+                    newAllocator.loadFromCache();
+                } catch (IOException e) {
+                    AbstractFontManager.this.plugin.logger().warn("Error while loading chars data from cache for font " + k.asString(), e);
+                }
+                return newAllocator;
+            });
+        }
+
+        @Override
+        public void parseSection(Pack pack, Path path, String node, Key id, Map<String, Object> section) {
+            if (AbstractFontManager.this.images.containsKey(id)) {
+                throw new LocalizedResourceConfigException("warning.config.image.duplicate");
             }
 
             Object file = section.get("file");
             if (file == null) {
-                throw new LocalizedResourceConfigException("warning.config.image.missing_file", path, id);
+                throw new LocalizedResourceConfigException("warning.config.image.missing_file");
             }
 
-            String resourceLocation = CharacterUtils.replaceBackslashWithSlash(file.toString());
+            String resourceLocation = MiscUtils.make(CharacterUtils.replaceBackslashWithSlash(file.toString()), s -> s.endsWith(".png") ? s : s + ".png");
             if (!ResourceLocation.isValid(resourceLocation)) {
-                throw new LocalizedResourceConfigException("warning.config.image.invalid_file_chars", path, id, resourceLocation);
+                throw new LocalizedResourceConfigException("warning.config.image.invalid_file_chars", resourceLocation);
             }
-
-            String fontName = section.getOrDefault("font", "minecraft:default").toString();
+            String fontName = section.getOrDefault("font", pack.namespace()+ ":default").toString();
             if (!ResourceLocation.isValid(fontName)) {
-                throw new LocalizedResourceConfigException("warning.config.image.invalid_font_chars", path, id, fontName);
+                throw new LocalizedResourceConfigException("warning.config.image.invalid_font_chars", fontName);
             }
 
-            Key fontKey = Key.withDefaultNamespace(fontName, id.namespace());
-            Font font = getOrCreateFont(fontKey);
-            List<char[]> chars;
+            Key fontId = Key.withDefaultNamespace(fontName, id.namespace());
+            Font font = getOrCreateFont(fontId);
+
+            IdAllocator allocator = getOrCreateIdAllocator(fontId);
+
+            int rows;
+            int columns;
+            List<CompletableFuture<Integer>> futureCodepoints = new ArrayList<>();
             Object charsObj = ResourceConfigUtils.get(section, "chars", "char");
+            // 自动分配
             if (charsObj == null) {
-                throw new LocalizedResourceConfigException("warning.config.image.missing_char", path, id);
-            }
-            if (charsObj instanceof List<?> list) {
-                chars = MiscUtils.getAsStringList(list).stream().map(it -> {
-                    if (it.startsWith("\\u")) {
-                        return CharacterUtils.decodeUnicodeToChars(it);
-                    } else {
-                        return it.toCharArray();
+                Object grid = section.get("grid-size");
+                if (grid != null) {
+                    String gridString = grid.toString();
+                    String[] split = gridString.split(",");
+                    if (split.length != 2) {
+                        throw new LocalizedResourceConfigException("warning.config.image.invalid_grid_size", gridString);
                     }
-                }).toList();
-                if (chars.isEmpty()) {
-                    throw new LocalizedResourceConfigException("warning.config.image.missing_char", path, id);
+                    rows = Integer.parseInt(split[0]);
+                    columns = Integer.parseInt(split[1]);
+                    int chars = rows * columns;
+                    if (chars <= 0) {
+                        throw new LocalizedResourceConfigException("warning.config.image.invalid_grid_size", gridString);
+                    }
+                    for (int i = 0; i < rows; i++) {
+                        for (int j = 0; j < columns; j++) {
+                            futureCodepoints.add(allocator.requestAutoId(id.asString() + ":" + i + ":" + j));
+                        }
+                    }
+                } else {
+                    rows = 1;
+                    columns = 1;
+                    futureCodepoints.add(allocator.requestAutoId(id.asString()));
                 }
-            } else {
-                if (charsObj instanceof Integer integer) {
-                    chars = List.of(new char[]{(char) integer.intValue()});
+            }
+            // 使用了list
+            else if (charsObj instanceof List<?> list) {
+                List<String> charsList = MiscUtils.getAsStringList(list);
+                if (charsList.isEmpty() || charsList.getFirst().isEmpty()) {
+                    throw new LocalizedResourceConfigException("warning.config.image.missing_char");
+                }
+                int tempColumns = -1;
+                rows = charsList.size();
+                for (int i = 0; i < charsList.size(); i++) {
+                    String charString = charsList.get(i);
+                    int[] codepoints;
+                    if (charString.startsWith("\\u")) {
+                        codepoints = CharacterUtils.charsToCodePoints(CharacterUtils.decodeUnicodeToChars(charString));
+                    } else {
+                        codepoints = CharacterUtils.charsToCodePoints(charString.toCharArray());
+                    }
+                    for (int j = 0; j < codepoints.length; j++) {
+                        if (codepoints[j] == 0) {
+                            futureCodepoints.add(CompletableFuture.completedFuture(0));
+                        } else {
+                            futureCodepoints.add(allocator.assignFixedId(id.asString() + ":" + i + ":" + j, codepoints[j]));
+                        }
+                    }
+                    if (tempColumns == -1) {
+                        tempColumns = codepoints.length;
+                    } else if (tempColumns != codepoints.length) {
+                        throw new LocalizedResourceConfigException("warning.config.image.invalid_codepoint_grid");
+                    }
+                }
+                columns = tempColumns;
+            }
+            // 使用了具体的值
+            else {
+                if (charsObj instanceof Integer codepoint) {
+                    futureCodepoints.add(allocator.assignFixedId(id.asString(), codepoint));
+                    rows = 1;
+                    columns = 1;
                 } else {
                     String character = charsObj.toString();
                     if (character.isEmpty()) {
-                        throw new LocalizedResourceConfigException("warning.config.image.missing_char", path, id);
+                        throw new LocalizedResourceConfigException("warning.config.image.missing_char");
                     }
-                    if (character.length() == 1) {
-                        chars = List.of(character.toCharArray());
+                    rows = 1;
+                    int[] codepoints;
+                    if (character.startsWith("\\u")) {
+                        codepoints = CharacterUtils.charsToCodePoints(CharacterUtils.decodeUnicodeToChars(character));
                     } else {
-                        if (character.startsWith("\\u")) {
-                            chars = List.of(CharacterUtils.decodeUnicodeToChars(character));
+                        codepoints = CharacterUtils.charsToCodePoints(character.toCharArray());
+                    }
+                    columns = codepoints.length;
+                    for (int i = 0; i < codepoints.length; i++) {
+                        if (codepoints[i] == 0) {
+                            futureCodepoints.add(CompletableFuture.completedFuture(0));
                         } else {
-                            // ??? TODO 需要测试特殊字符集
-//                            if (CharacterUtils.containsCombinedCharacter(character)) {
-//                                TranslationManager.instance().log("warning.config.image.invalid_char", path.toString(), id.toString());
-//                            }
-                            chars = List.of(character.toCharArray());
+                            futureCodepoints.add(allocator.assignFixedId(id.asString() + ":0:" + i, codepoints[i]));
                         }
                     }
                 }
             }
 
-            int size = -1;
-            int[][] codepointGrid = new int[chars.size()][];
-            for (int i = 0; i < chars.size(); ++i) {
-                int[] codepoints = CharacterUtils.charsToCodePoints(chars.get(i));
-                for (int codepoint : codepoints) {
-                    if (font.isCodepointInUse(codepoint)) {
-                        BitmapImage image = font.bitmapImageByCodepoint(codepoint);
-                        throw new LocalizedResourceConfigException("warning.config.image.codepoint_conflict", path, id,
-                                fontKey.toString(),
-                                CharacterUtils.encodeCharsToUnicode(Character.toChars(codepoint)),
-                                new String(Character.toChars(codepoint)),
-                                image.id().toString());
+            CompletableFutures.allOf(futureCodepoints).whenComplete((v, t) -> ResourceConfigUtils.runCatching(path, node, () -> {
+                if (t != null) {
+                    if (t instanceof CompletionException e) {
+                        Throwable cause = e.getCause();
+                        if (cause instanceof IdAllocator.IdConflictException conflict) {
+                            throw new LocalizedResourceConfigException("warning.config.image.codepoint.conflict",
+                                    fontId.toString(),
+                                    CharacterUtils.encodeCharsToUnicode(Character.toChars(conflict.id())),
+                                    new String(Character.toChars(conflict.id())),
+                                    conflict.previousOwner()
+                            );
+                        } else if (cause instanceof IdAllocator.IdExhaustedException) {
+                            throw new LocalizedResourceConfigException("warning.config.image.codepoint.exhausted", fontId.asString());
+                        }
+                    }
+                    throw new RuntimeException("Unknown error occurred", t);
+                }
+
+                int[][] codepointGrid = new int[rows][columns];
+
+                for (int i = 0; i < rows; i++) {
+                    for (int j = 0; j < columns; j++) {
+                        try {
+                            int codepoint = futureCodepoints.get(i * columns + j).get();
+                            codepointGrid[i][j] = codepoint;
+                        } catch (InterruptedException | ExecutionException e) {
+                            AbstractFontManager.this.plugin.logger().warn("Interrupted while allocating codepoint for image " + id.asString(), e);
+                            return;
+                        }
                     }
                 }
-                if (codepoints.length == 0) {
-                    throw new LocalizedResourceConfigException("warning.config.image.missing_char", path, id);
-                }
-                codepointGrid[i] = codepoints;
-                if (size == -1) size = codepoints.length;
-                if (size != codepoints.length) {
-                    throw new LocalizedResourceConfigException("warning.config.image.invalid_codepoint_grid", path, id);
-                }
-            }
 
-            Object heightObj = section.get("height");
-            if (!resourceLocation.endsWith(".png")) resourceLocation += ".png";
-
-            if (heightObj == null) {
-                Key namespacedPath = Key.of(resourceLocation);
-                Path targetImagePath = pack.resourcePackFolder()
-                        .resolve("assets")
-                        .resolve(namespacedPath.namespace())
-                        .resolve("textures")
-                        .resolve(namespacedPath.value());
-                if (Files.exists(targetImagePath)) {
-                    try (InputStream in = Files.newInputStream(targetImagePath)) {
-                        BufferedImage image = ImageIO.read(in);
-                        heightObj = image.getHeight() / codepointGrid.length;
-                    } catch (IOException e) {
-                        plugin.logger().warn("Failed to load image " + targetImagePath, e);
-                        return;
+                Object heightObj = section.get("height");
+                if (heightObj == null) {
+                    Key namespacedPath = Key.of(resourceLocation);
+                    Path targetImagePath = pack.resourcePackFolder()
+                            .resolve("assets")
+                            .resolve(namespacedPath.namespace())
+                            .resolve("textures")
+                            .resolve(namespacedPath.value());
+                    if (Files.exists(targetImagePath)) {
+                        try (InputStream in = Files.newInputStream(targetImagePath)) {
+                            BufferedImage image = ImageIO.read(in);
+                            heightObj = image.getHeight() / codepointGrid.length;
+                        } catch (IOException e) {
+                            plugin.logger().warn("Failed to load image " + targetImagePath, e);
+                            return;
+                        }
+                    } else {
+                        throw new LocalizedResourceConfigException("warning.config.image.missing_height");
                     }
-                } else {
-                    throw new LocalizedResourceConfigException("warning.config.image.missing_height", path, id);
                 }
-            }
 
-            int height = ResourceConfigUtils.getAsInt(heightObj, "height");
-            int ascent = ResourceConfigUtils.getAsInt(section.getOrDefault("ascent", height - 1), "ascent");
-            if (height < ascent) {
-                throw new LocalizedResourceConfigException("warning.config.image.height_ascent_conflict", path, id, String.valueOf(height), String.valueOf(ascent));
-            }
-
-            BitmapImage bitmapImage = new BitmapImage(id, fontKey, height, ascent, resourceLocation, codepointGrid);
-            for (int[] y : codepointGrid) {
-                for (int x : y) {
-                    font.addBitmapImage(x, bitmapImage);
+                int height = ResourceConfigUtils.getAsInt(heightObj, "height");
+                int ascent = ResourceConfigUtils.getAsInt(section.getOrDefault("ascent", height - 1), "ascent");
+                if (height < ascent) {
+                    throw new LocalizedResourceConfigException("warning.config.image.height_ascent_conflict", String.valueOf(height), String.valueOf(ascent));
                 }
-            }
 
-            images.put(id, bitmapImage);
+                BitmapImage bitmapImage = new BitmapImage(id, fontId, height, ascent, resourceLocation, codepointGrid);
+                for (int[] y : codepointGrid) {
+                    for (int x : y) {
+                        font.addBitmapImage(x, bitmapImage);
+                    }
+                }
+
+                AbstractFontManager.this.images.put(id, bitmapImage);
+
+            }, () -> GsonHelper.get().toJson(section)));
         }
     }
 }
